[gd_scene load_steps=10 format=3 uid="uid://j7n3jd2qe28s"]

[ext_resource type="Texture2D" uid="uid://xhecuedx1inh" path="res://textures/tarot_cards/pentacles/Pents01.jpg" id="1_famw6"]
[ext_resource type="Script" path="res://scenes/environment/platforms/drop_platform.gd" id="2_4x6vc"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xx562"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ivfst"]
resource_local_to_scene = true
transparency = 1
emission = Color(0, 0.831457, 0.801135, 1)
emission_operator = 1
normal_enabled = true
normal_scale = 16.0
normal_texture = ExtResource("1_famw6")
rim_tint = 1.0
clearcoat_roughness = 1.0
clearcoat_texture = SubResource("CompressedTexture2D_xx562")
backlight = Color(1, 1, 1, 1)
uv1_scale = Vector3(1, -1, 1)
uv1_triplanar_sharpness = 0.5
grow_amount = 0.337
proximity_fade_distance = 0.01
distance_fade_min_distance = 10.0
distance_fade_max_distance = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_tk0by"]
size = Vector3(3.97394, 0.121216, 2.30795)

[sub_resource type="Animation" id="Animation_dl404"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_31fjl"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o4h3b"]
resource_name = "wobble"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.00078793, 0.0429628, -0.0183265), Vector3(0, 0, 0), Vector3(0.000680176, -0.0191342, 0.0355284), Vector3(0, 0, 0), Vector3(2.32654e-10, -0.0407011, -0.0389034), Vector3(0, 0, 0), Vector3(-0.00308763, 0.0711775, 0.043279), Vector3(0, 0, 0), Vector3(-0.00420421, 0.0987838, 0.0423957), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0348042, 0), Vector3(0, 0.0118147, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lioa6"]
_data = {
"RESET": SubResource("Animation_dl404"),
"fade_in": SubResource("Animation_31fjl"),
"wobble": SubResource("Animation_o4h3b")
}

[node name="DropPlatform" type="Node3D"]
script = ExtResource("2_4x6vc")

[node name="Card" type="CSGBox3D" parent="."]
use_collision = true
collision_mask = 0
size = Vector3(6, 0.09, 3.5)
material = SubResource("StandardMaterial3D_ivfst")

[node name="PlayerDetectionArea" type="Area3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0.000277972, 0, -0.000277972, 1.5, 0, 0, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
transform = Transform3D(1, -2.1684e-18, 0, 0, 1, 0, 0, 4.36557e-11, 1, 0.00321448, 0.029358, 0.0158047)
shape = SubResource("BoxShape3D_tk0by")

[node name="DropTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DropResetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Card")
libraries = {
"": SubResource("AnimationLibrary_lioa6")
}
